--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "tv",
     "netflix"
   ],
-  "author": "artjacob <aacj03@gmail.com>",
-  "license": "MIT",
+  "author": "artjacob <jacob@emitremmus.com>",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/artjacob/series/issues"
   },
