--- a/package.json
+++ b/package.json
@@ -3,30 +3,45 @@
   "version": "1.0.0",
   "description": "Keeping track of watched series and episodes",
   "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/artjacob/series.git"
+  },
+  "scripts": {
+    "start": "gulp serve -s"
   },
   "keywords": [
     "series",
     "tv",
     "netflix"
   ],
-  "author": "artjacob <jacob@emitremmus.com>",
+  "author": {
+    "name": "Arthur Jacob",
+    "email": "jacob@emitremmus.com",
+    "url": "https://emitremmus.com"
+  },
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/artjacob/series/issues"
   },
   "homepage": "https://github.com/artjacob/series",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
-    "gulp-babel": "^5.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.1"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "ansi-colors": "^4.1.1",
+    "browser-sync": "^2.26.7",
+    "fancy-log": "^1.3.2",
+    "fs-extra": "^8.1.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.2"
   }
 }
